# MarketMind_AI

./: .gitignore  CLAUDE.md  MarketMind_AI_Capstone_Plan.txt  README.md  pyproject.toml  requirements.txt
.forgejo/workflows/: test.yml
config/: schemas.py  settings.py
databricks_notebooks/: 01_kafka_producer.py  02_dlt_pipeline.py  03_news_pipeline.py  04_news_producer.py  05_advanced_analytics.py  05a_seed_historical_data.py  06_ai_agent.py  07_gradio_ui.py
notebooks/: bronze_streaming.py  gold_aggregation.py  kafka_producer.py  news_nlp_pipeline.py  news_producer.py  silver_transform.py
scripts/: setup_schema.sql
tests/: conftest.py
tests/integration/: test_real_news_pipeline.py  test_real_producer.py
tests/unit/: test_agent.py  test_agent_tools.py  test_bronze_streaming.py  test_gold_aggregation.py  test_gradio_app.py  test_kafka_producer.py  test_news_nlp_pipeline.py  test_news_producer.py  test_schemas.py  test_sentiment.py  test_silver_transform.py  test_technical_indicators.py
utils/: agent.py  agent_tools.py  gradio_app.py  sentiment.py  technical_indicators.py
